--- a/backend/Portal.UI-MVC-Web/Resources/Materials.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Materials.resx
@@ -117,13 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Delete" xml:space="preserve">
-    <value>Delete</value>
+  <data name="Published" xml:space="preserve">
+    <value>Published</value>
   </data>
-  <data name="Edit" xml:space="preserve">
-    <value>Edit</value>
+  <data name="Title" xml:space="preserve">
+    <value>Title</value>
   </data>
-  <data name="Submit" xml:space="preserve">
-    <value>Submit</value>
+  <data name="Url" xml:space="preserve">
+    <value>Url</value>
   </data>
 </root>
