Finish article jquery script once again + correct necessary markup

--- a/backend/Portal.UI-MVC-Web/Resources/Headings.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Headings.resx
@@ -120,4 +120,7 @@
   <data name="DataTable" xml:space="preserve">
     <value>Data table</value>
   </data>
+  <data name="NoData" xml:space="preserve">
+    <value>No data</value>
+  </data>
 </root>
