--- a/backend/Portal.UI-MVC-Web/Resources/Profile.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Profile.resx
@@ -117,25 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Create" xml:space="preserve">
-    <value>Create</value>
+  <data name="Email" xml:space="preserve">
+    <value>E-mail</value>
   </data>
-  <data name="Delete" xml:space="preserve">
-    <value>Delete</value>
+  <data name="Name" xml:space="preserve">
+    <value>Name</value>
   </data>
-  <data name="Edit" xml:space="preserve">
-    <value>Edit</value>
-  </data>
-  <data name="Login" xml:space="preserve">
-    <value>Log In</value>
-  </data>
-  <data name="Logout" xml:space="preserve">
-    <value>Log Out</value>
-  </data>
-  <data name="Register" xml:space="preserve">
-    <value>Sign Up</value>
-  </data>
-  <data name="Submit" xml:space="preserve">
-    <value>Submit</value>
+  <data name="Password" xml:space="preserve">
+    <value>Password</value>
   </data>
 </root>
