--- a/backend/Portal.UI-MVC-Web/Resources/Materials.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Materials.resx
@@ -117,13 +117,25 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Author" xml:space="preserve">
+    <value>Author</value>
+  </data>
+  <data name="Duration" xml:space="preserve">
+    <value>Duration</value>
+  </data>
+  <data name="Format" xml:space="preserve">
+    <value>Format</value>
+  </data>
   <data name="Published" xml:space="preserve">
     <value>Published</value>
+  </data>
+  <data name="Quality" xml:space="preserve">
+    <value>Quality</value>
   </data>
   <data name="Title" xml:space="preserve">
     <value>Title</value>
   </data>
   <data name="Url" xml:space="preserve">
-    <value>Url</value>
+    <value>URL</value>
   </data>
 </root>
