--- a/backend/Portal.UI-MVC-Web/Resources/Materials.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Materials.resx
@@ -126,6 +126,9 @@
   <data name="Format" xml:space="preserve">
     <value>Format</value>
   </data>
+  <data name="PageCount" xml:space="preserve">
+    <value>Page Count</value>
+  </data>
   <data name="Published" xml:space="preserve">
     <value>Published</value>
   </data>
