--- a/backend/Portal.UI-MVC-Web/Resources/Objects.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Objects.resx
@@ -120,6 +120,9 @@
   <data name="Author" xml:space="preserve">
     <value>Author</value>
   </data>
+  <data name="Description" xml:space="preserve">
+    <value>Description</value>
+  </data>
   <data name="Duration" xml:space="preserve">
     <value>Duration</value>
   </data>
