--- a/backend/Portal.UI-MVC-Web/Resources/Headings.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Headings.resx
@@ -117,10 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Articles" xml:space="preserve">
+    <value>Articles</value>
+  </data>
+  <data name="Books" xml:space="preserve">
+    <value>Books</value>
+  </data>
   <data name="DataTable" xml:space="preserve">
     <value>Data table</value>
   </data>
   <data name="NoData" xml:space="preserve">
     <value>No data</value>
+  </data>
+  <data name="Perks" xml:space="preserve">
+    <value>Perks</value>
+  </data>
+  <data name="Videos" xml:space="preserve">
+    <value>Videos</value>
   </data>
 </root>
