Finish profile info functionality

--- a/backend/Portal.UI-MVC-Web/Resources/Actions.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Actions.resx
@@ -141,4 +141,7 @@
   <data name="Submit" xml:space="preserve">
     <value>Submit</value>
   </data>
+  <data name="Update" xml:space="preserve">
+    <value>Update</value>
+  </data>
 </root>
