Finish courses progress view functionality (only observation, not learning)

--- a/backend/Portal.UI-MVC-Web/Resources/Objects.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Objects.resx
@@ -135,6 +135,9 @@
   <data name="PageCount" xml:space="preserve">
     <value>Page Count</value>
   </data>
+  <data name="Progress" xml:space="preserve">
+    <value>Progress</value>
+  </data>
   <data name="Published" xml:space="preserve">
     <value>Published</value>
   </data>
