--- a/backend/Portal.UI-MVC-Web/Resources/Objects.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Objects.resx
@@ -132,6 +132,9 @@
   <data name="Learned" xml:space="preserve">
     <value>Learned</value>
   </data>
+  <data name="Level" xml:space="preserve">
+    <value>Level</value>
+  </data>
   <data name="Name" xml:space="preserve">
     <value>Name</value>
   </data>
