--- a/backend/Portal.UI-MVC-Web/Resources/Headings.resx
+++ b/backend/Portal.UI-MVC-Web/Resources/Headings.resx
@@ -129,6 +129,9 @@
   <data name="Finished" xml:space="preserve">
     <value>Course is finished</value>
   </data>
+  <data name="Materials" xml:space="preserve">
+    <value>Materials</value>
+  </data>
   <data name="NoData" xml:space="preserve">
     <value>No data</value>
   </data>
